# MEA-Thermodynamics

./: .gitignore  Get_True_Mol_Frac.py  Get_True_Mol_Frac_2.py  HANDOFF.md  PC_SAFT_test_2.py  PC_SAFT_v2.py  README.md  app.py  app2.py  app3.py  pcsaft.cp39-win_amd64.pyd  pcsaft.py  plan.md  practice.ipynb  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: validate.yml
.mplgallery/: manifest.yaml
.serena/: project.yml
MEA/: Density.py  Get_True_Mol_Frac.py  Get_True_Mol_Frac_New.py  Get_True_Mol_Frac_New_all_species.py  Get_True_Mol_Frac_with_activity.py  PC_SAFT_test.py  convex_optimization_gekko.py  epcsaft_data_inventory.py  epcsaft_diagnostics.py  epcsaft_present_plots.py  epcsaft_runtime.py  legacy_all_species_sweep_check.py  legacy_pcsaft_baseline.py  plot_all_species_pressure_diagnostic.py  plot_export.py  plot_legacy_pressure.py  plot_legacy_speciation.py  run_plot_exports.py
MEA/common/: config.py  plot_export.py
MEA/epcsaft_ionic/: __init__.py  model.py  plot_results.py  regress_parameters.py  smoke.py
MEA/epcsaft_neutral/: __init__.py  parameters.py  plot_pressure.py  runtime.py
MEA/nine_species/: __init__.py  chemistry.py  gekko_solver.py  pcsaft_parameters.py  plot_pressure_diagnostic.py  plot_speciation_diagnostic.py  sweep_check.py
MEA/six_species/: chemistry.py  plot_pressure.py  plot_speciation.py
analyses/: README.md
analysis/: epcsaft_ionic_package_feedback.md  epcsaft_reactive_electrolyte_issue_body.md
archive/: README.md
docs/agents/: methods.md  (+1 more)
integration/: epcsaft_contract.json
pcsaft_models_polley/: PC_SAFT.py  PC_SAFT_v3.py  ePC_SAFT_properties.py  pcsaft_electrolyte.py  pcsaft_electrolyte_py.py  pcsaft_electrolyte_py_polley.py
scripts/: build_canonical_cheq_dataset.py  build_canonical_vle_dataset.py  build_loaded_property_evidence.py  build_manuscript.sh  build_mea_diagnostic_bundle.py  build_regression_readiness.py  build_volumetric_evidence.py  check_epcsaft_integration.py  check_manuscript_freshness.py  check_no_local_paths.py  doctor.py  generate_all_analysis_data.py  render_all_plots.py  validate_mea_data_library.py  validate_mea_source_contracts.py  validate_project.py  validate_volumetric_evidence.py
tests/: test_analysis_workflow_architecture.py  test_canonical_cheq_dataset.py  test_canonical_speciation_source_plots.py  test_canonical_vle_dataset.py  test_completion_claim_guards.py  test_controlled_comparison_figure.py  test_controlled_comparison_numerics.py  test_epcsaft_contract.py  test_epcsaft_ionic.py  test_epcsaft_ionic_approval_check.py  test_epcsaft_ionic_artifact_promotion.py  test_epcsaft_ionic_native_regression.py  test_epcsaft_ionic_preregistration.py  test_epcsaft_ionic_validation.py  test_global_regression_artifacts.py  test_ion_parameter_regression_artifacts.py  test_linux_workflow_portability.py  test_loaded_property_extractions.py  test_manuscript_claim_integrity.py  test_manuscript_numerical_claims.py  test_mea_diagnostic_bundle.py  test_mea_source_contracts.py  test_model_comparison.py  test_nine_species_chemistry.py  test_phase1_completion_gates.py  test_phase1_numerics.py  test_phase2_activity_scaffold.py  test_phase2_numerics.py  test_phase3_authority_rebaseline.py  test_project_structure.py  test_project_tooling.py  test_reaction_catalog.py  test_reactive_speciation_feasibility.py  test_reactive_speciation_numerics.py  test_reference_observation_contract.py  test_reference_source_manifests.py  test_regression_readiness.py  test_solver_acceptance.py  test_solver_numerics.py  test_submission_package.py  (+1 more)
(+701 files in other folders)
