[project]
name = "mea-thermodynamics"
version = "0.1.0"
description = "MEA-CO2-H2O thermodynamics workflows, diagnostics, and plot regeneration."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "epcsaft",
    "gekko>=1.3",
    "matplotlib>=3.10",
    "numdifftools>=0.9",
    "numpy>=2.0",
    "pandas>=2.2",
    "pcsaft",
    "pillow>=11",
    "plotly>=6",
    "scipy>=1.15",
    "streamlit>=1.45",
    "sympy>=1.13",
]

[dependency-groups]
idaes = [
    "idaes-pse>=2.8",
    "pyomo>=6.9",
]

[tool.uv]
package = false

[tool.uv.sources]
epcsaft = { path = "../ePC-SAFT" }
pcsaft = { path = "../PC-SAFT" }
