[project]
name = "mea-thermodynamics"
version = "0.1.0"
description = "MEA-CO2-H2O thermodynamics workflows, diagnostics, and plot regeneration."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "epcsaft @ git+https://github.com/tannerpolley/ePC-SAFT.git@e9510abae528016bd2513f12069fc0534b252bea",
    "matplotlib>=3.10",
    "numdifftools>=0.9",
    "numpy>=2.0",
    "pandas>=2.2",
    "pcsaft",
    "pillow>=11",
    "plotly>=6",
    "scipy>=1.15",
    "streamlit>=1.45",
    "sympy>=1.13",
]

[dependency-groups]
test = [
    "pytest>=8.0",
]
dev = [
    { include-group = "test" },
]
idaes = [
    "idaes-pse>=2.8",
    "pyomo>=6.9",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
pcsaft = { path = "C:/Users/Tanner/Documents/git/PC-SAFT" }
